[package]
name = "ecosystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10"
big-brain = "0.17"
bevy_turborand = "0.5"
bevy_mod_picking = "0.11"
leafwing-input-manager = "0.9"
bracket-pathfinding = "0.8.7"
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }
